major refacts
