# Server/src/auth/authHandler.js
@@ -1,25 +1,15 @@
 const jwt = require('jsonwebtoken');
 const logger = require('../config/logger');
 const User = require('../models/user.model');
-// logger
-// http errors
-
-// const userDB = [
-//   { _id: "6439c3b1d8bb9167e5c2ab53", "email": "t@ester.com", "password": "user_pw", role: "USER" },
-//   { _id: "6439c3b1d8bb9167e5c2ab52", "email": 'admin@tester.com', "password": "admin_pw", role: "ADMIN" }
-// ];
 
 const refreshDB = [];
 
 
-//* access
 exports.login = async (req, res, next) => {
   if (!req.body['email'] || !req.body['password']) {
     res.status(400).send('Missing email or password');
   };
 
-  // Lekérdezés a DB-ből
-  // const user = userDB.find(u => u.email === req.body['email'] && u.password === req.body['password']);
   const user = await User.findOne({ email: req.body['email'], password: req.body['password'] });
   if (!user) {
     return res.status(404).send('Invalid email or password')
@@ -27,7 +17,6 @@ exports.login = async (req, res, next) => {
 
   const accessToken = jwt.sign({
     email: user.email,
-    // password: user.password,
     role: user.role,
     _id: user._id
   }, process.env.ACCESS_TOKEN_SECRET_KEY,
@@ -35,10 +24,8 @@ exports.login = async (req, res, next) => {
       expiresIn: process.env.ACCESS_TOKEN_EXPIRY
     });
 
-  //TODO refreshtoken
   const refreshToken = jwt.sign({
     email: user.email,
-    // password: user.password,
     role: user.role,
     _id: user._id
   }, process.env.REFRESH_TOKEN_SECRET_KEY);
@@ -56,7 +43,7 @@ exports.login = async (req, res, next) => {
 
 };
 
-//* refresh
+
 exports.refresh = (req, res, next) => {
   const refreshToken = req.body['refreshToken'];
 
@@ -88,6 +75,7 @@ exports.refresh = (req, res, next) => {
   }
 };
 
+
 exports.logout = (req, res, next) => {
   const { refreshToken } = req.body;
 
@@ -104,6 +92,7 @@ exports.logout = (req, res, next) => {
   }
 };
 
+
 exports.me = (req, res, next) => {
   if(req.headers.authorization){
     const token = req.headers.authorization.split(' ')[1];
@@ -117,9 +106,4 @@ exports.me = (req, res, next) => {
   } else {
     logger.error('Auth of headers not found')
   }
-}
-
-// {"email": "t@ester.com", "password": "user_pw"}
-
-// {"email": "admin@tester.com, "password": "admin_pw"}
-// {"refreshToken": ""}
+};
